# Undead

./: CMakeLists.txt  Doc_SDL2  README.md  game.c  game.h  game0  game_alea.c  game_alea.h  game_io.c  game_io.h  model.c  model.h  solution_vrai.sol  test.c  todo.txt  toolbox.c  toolbox.h  undead_alea.c  undead_sdl.c  undead_solve.c  undead_text.c
latex/: rendu.tex
